KFSPTS-35513 add code review changes